# HiCR

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  compile.sh  jenkins-pipeline.sh  meson.build  meson_options.txt  tags
examples/: meson.build
examples/RPCEngine/: README.rst  meson.build
examples/RPCEngine/source/: mpi.cpp
examples/abc/: .gitignore  meson.build
examples/abc/source/: main.cpp
examples/ascend/: meson.build  run_add_example.sh
examples/ascend/add_operator/: meson.build  run_add_example.sh
examples/ascend/op_models/: 0_Add_1_2_192_1_1_2_192_1_1_2_192_1.om
examples/ascend/source/: addOperator.cpp  runner.hpp
examples/autosleep/: meson.build
examples/autosleep/source/: main.cpp
examples/channels/: README.rst  meson.build
examples/channels/fixedSize/: README.rst  meson.build
examples/channels/mpsc/: README.md  meson.build
examples/channels/spsc/: meson.build
examples/channels/variableSize/: README.rst
examples/cholesky/: README.txt  meson.build  run_all.sh
examples/cholesky/source/: main.cpp  utils.hpp
examples/createInstance/: meson.build
examples/createInstance/include/: createInstance.hpp
examples/createInstance/source/: pthreads.cpp
examples/data_movers/: meson.build
examples/data_movers/source/: test1.cpp
examples/deployer/: common.hpp  meson.build
examples/deployer/multiple/: README.md  machineModel.json  meson.build
examples/deployer/single/: README.md  machineModel.json  meson.build
examples/detectInstances/: meson.build
examples/detectInstances/source/: pthreads.cpp
examples/hicr/: meson.build
examples/hicr/channel/: meson.build
examples/hicr/channels/: meson.build
examples/hicr/instance/: meson.build
examples/hicr/instances/: meson.build
examples/hicr/kernel/: README.md  meson.build
examples/hicr/machineModel/: meson.build
examples/hicr/machinemodel/: meson.build
examples/hicr/memcpy/: README.md  meson.build
examples/hicr/memcpyWithRecvCount/: meson.build
examples/hicr/mpsc/: meson.build
examples/hicr/process/: meson.build
examples/hicr/rpc/: README.md  meson.build
examples/hicr/topology/: README.md  meson.build
examples/hicr/topologyRPC/: meson.build
examples/kernel/: README.rst  common.hpp  meson.build
examples/kernel/kernels/: compile.sh  gemm.cl  gemm.json
examples/kernel/op_models/: 0_GEMM_1_2_128_64_1_2_64_256_1_2_128_256_1_2_1_1_2_1_1_2_128_256.om  0_GEMM_1_2_4_8_1_2_8_2_1_2_4_2_1_2_1_1_2_1_1_2_4_2.om
examples/kernel/source/: acl.cpp  ascend.cpp  nosv.cpp  opencl.cpp  pthreads.cpp
examples/machineModel/: README.md  machineModel.json  meson.build
examples/machineModel/source/: main.cpp
examples/memcpy/: README.rst  meson.build
examples/memcpy/distributed/: README.rst  meson.build  remoteMemcpy.pptx
examples/memcpy/local/: README.rst  meson.build  telephoneGame.pptx
examples/neuralNetwork/: README.rst  meson.build
examples/neuralNetwork/groundTruth/: meson.build
examples/neuralNetwork/kernels/: add.json  compile-acl.sh  compile-ascend.sh  gemm.json  kernels.cl  meson.build  relu.json
examples/neuralNetwork/proto/: compile.sh  meson.build  onnx.proto3  onnx.proto3.pb.cc  onnx.proto3.pb.h
examples/neuralNetwork/python/: create-venv.sh  meson.build  requirements.txt
examples/neuralNetwork/source/: acl.cpp  ascend.cpp  meson.build  opencl.cpp  pthreads.cpp
examples/objectStore/: README.rst  meson.build
examples/objectStore/publishRead/: README.rst  meson.build
examples/objectStore/singleInstance/: README.rst  meson.build
examples/pingPong/: README.rst  meson.build
examples/pingPong/include/: common.hpp  consumer.hpp  producer.hpp
examples/pingPong/source/: lpf.cpp  mpi.cpp
examples/runtime/: machineModel.json  meson.build
examples/runtime/multiple/: machineModel.json  meson.build
examples/runtime/single/: README.md  machineModel.json  meson.build
examples/runtime/source/: main.cpp
examples/tasking/: README.rst  meson.build  runtime.hpp  task.hpp
examples/tasking/abcTasks/: README.rst  meson.build
examples/tasking/conditionVariable/: meson.build
examples/tasking/energySaver/: meson.build
examples/tasking/fibonacci/: README.rst  meson.build
examples/tasking/getCurrentTask/: meson.build
examples/tasking/mutex/: meson.build
examples/tasking/resourceList/: README.rst  meson.build
examples/taskr/: meson.build
examples/taskr/abcTasks/: README.md  meson.build
examples/taskr/cholesky/: README.md  meson.build  run_all.sh
examples/taskr/energySaver/: meson.build
examples/taskr/getCurrentTask/: README.md  meson.build
examples/taskr/resourceList/: README.md  meson.build
examples/topology/: README.rst  meson.build
examples/topology/distributed/: README.rst  meson.build
examples/topology/local/: README.rst  meson.build
examples/topology/source/: ascend.cpp
include/hicr/: backend.hpp  channel.hpp  common.hpp  computeResource.hpp  computeUnit.hpp  coroutine.hpp  dataMover.hpp  datamover.hpp  definitions.hpp  dispatcher.hpp  event.hpp  eventMap.hpp  exceptions.hpp  executionState.hpp  executionUnit.hpp  hicr.hpp  instance.hpp  machineModel.hpp  memorySlot.hpp  memorySpace.hpp  meson.build  messageTag.hpp  processingUnit.hpp  resource.hpp  runtime.hpp  task.hpp  taskPool.hpp  worker.hpp
include/hicr/L0/: computeResource.hpp  computeUnit.hpp  device.hpp  executionState.hpp  executionUnit.hpp  globalMemorySlot.hpp  instance.hpp  localMemorySlot.hpp  memorySlot.hpp  memorySpace.hpp  processingUnit.hpp  topology.hpp
include/hicr/L1/: communicationManager.hpp  computeManager.hpp  deviceManager.hpp  instanceManager.hpp  memoryManager.hpp  topologyManager.hpp
include/hicr/backends/: backend.hpp  computeManager.hpp  dataMover.hpp  instanceManager.hpp  (+3 more)
tests/: meson.build
tests/backends/: meson.build
tests/coverage/: meson.build
tests/frontends/: meson.build
tests/hicr/: coverage.cpp  dispatcher.cpp  meson.build  task.cpp  worker.cpp
tests/include/: mocr.hpp
tests/taskr/: coverage.cpp  meson.build  runtime.cpp
tests/unit/: meson.build  task.cpp  task.hpp
(+1034 files in other folders)
