option('backends', type : 'array', choices : ['sharedMemory/hwloc', 'sharedMemory/pthreads', 'mpi', 'lpf',  'ascend'], value : [ ],
       description : 'Specifies which backends to enable for compilation with HiCR',
       value: [ 'sharedMemory/hwloc', 'sharedMemory/pthreads' ]
       )
      
option('buildTests', type : 'boolean', value : false,
       description: 'Indicates whether to build tests'
)

option('buildExamples', type : 'boolean', value : false,
       description: 'Indicates whether to build example apps'
)

option('exceptionModel', type : 'combo', choices : [ 'stdexception', 'abort' ], value : 'stdexception',
       description : 'Specifies how exceptions are implemented in HiCR'
       )
      
option('compileWarningsAsErrors', type : 'boolean', value : false,
       description: 'Indicates whether a compilation warning should result in a fatal error. This is useful for CI testing but may result in inconveniences for normal users, hence it should be false by default'
) 