option('backends', type : 'array', choices : ['host/hwloc', 'host/pthreads', 'mpi', 'lpf',  'ascend'], 
       description : 'Specifies which builtin backends to enable for compilation with HiCR',
       value: [ 'host/hwloc', 'host/pthreads' ]
       )

option('frontends', type : 'array', choices : [ 'channel', 'deployer', 'machineModel', 'tasking' ], 
       description : 'Specifies which builtin frontends to enable for compilation with HiCR',
       value: [ 'channel', 'deployer', 'machineModel', 'tasking' ]
       )
             
      
option('buildTests', type : 'boolean', value : false,
       description: 'Indicates whether to build tests'
)

option('buildExamples', type : 'boolean', value : false,
       description: 'Indicates whether to build example apps'
)

option('exceptionModel', type : 'combo', choices : [ 'stdexception', 'abort' ], value : 'stdexception',
       description : 'Specifies how exceptions are implemented in HiCR'
       )
      
option('compileWarningsAsErrors', type : 'boolean', value : false,
       description: 'Indicates whether a compilation warning should result in a fatal error. This is useful for CI testing but may result in inconveniences for normal users, hence it should be false by default'
) 
