option('backends', type : 'array', choices : ['hwloc', 'boost', 'pthreads', 'mpi', 'lpf', 'acl', 'nosv', 'opencl'], 
       description : 'Specifies which builtin backends to enable for compilation with HiCR',
       value: [ 'hwloc', 'pthreads', 'boost' ]
)

option('frontends', type : 'array', choices : [ 'channel', 'RPCEngine', 'tasking', 'objectStore' ],
       description : 'Specifies which builtin frontends to enable for compilation with HiCR',
       value: [ 'channel', 'RPCEngine', 'tasking', 'objectStore' ]
)     
      
option('buildTests', type : 'boolean', value : false,
       description: 'Indicates whether to build tests'
)

option('buildExamples', type : 'boolean', value : false,
       description: 'Indicates whether to build example apps'
)

option('exceptionModel', type : 'combo', choices : [ 'stdexception', 'abort' ], value : 'stdexception',
       description : 'Specifies how exceptions are implemented in HiCR'
)
      
option('compileWarningsAsErrors', type : 'boolean', value : false,
       description: 'Indicates whether a compilation warning should result in a fatal error. This is useful for CI testing but may result in inconveniences for normal users, hence it should be false by default'
) 

###### Backend-specific options
option('aclPath', type : 'string', value : '',
       description: 'Indicates home directory where the acl libraries are e.g., /usr/local/Ascend/ascend-toolkit/<acl version>/)'
)
