subdir('memcpy')
subdir('kernel')
subdir('topology')
subdir('topologyRPC')

if 'RPCEngine' in enabledFrontends
 subdir('RPCEngine')
endif 

if 'channel' in enabledFrontends
 subdir('channels')
endif 

if 'tasking' in enabledFrontends
  subdir('tasking')
endif

if 'objectStore' in enabledFrontends
  subdir('objectStore')
endif
