subdir('memcpy')
subdir('kernel')
subdir('topology')

if 'RPCEngine' in enabledFrontends
 subdir('RPCEngine')
endif 

if 'channel' in enabledFrontends
 subdir('channels')
 subdir('pingPong')
endif 

if 'tasking' in enabledFrontends
  subdir('tasking')
endif

if 'objectStore' in enabledFrontends
  subdir('objectStore')
endif
