# Registering tests
test('coverage', executable('_coverage', 'coverage.cpp', dependencies: [  testDeps, hicrPthreadsBackendDep ] ), protocol: 'gtest', suite: [ 'taskr' ] )
test('runtime',  executable('runtime',   'runtime.cpp',  dependencies: [  testDeps, hicrPthreadsBackendDep ] ), protocol: 'gtest', suite: [ 'taskr' ] )
